--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "dotenv -e .env react-scripts build",
     "test": "dotenv -e .env react-scripts test",
     "eject": "react-scripts eject",
-    "backend": "nodemon server"
+    "backend": "nodemon api/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
